[gd_scene load_steps=4 format=3 uid="uid://b1ie6wij2th8y"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_4bw0s"]
[ext_resource type="FontFile" uid="uid://cguk2es4x34ol" path="res://assets/fonts/cloister_black/CloisterBlack.ttf" id="1_tlseu"]
[ext_resource type="Theme" uid="uid://esq87k5g5jpt" path="res://assets/themes/menu_button_theme.tres" id="2_jgulj"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4bw0s")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TitleContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TitleStack" type="Control" parent="TitleContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TitleContainer/TitleStack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -66.5
offset_right = 284.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 112
text = "sinaesthesia"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TitleContainer/TitleStack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -67.0
offset_right = 280.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.65098, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 112
text = "sin"
fit_content = true

[node name="SettingsContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SensitivityContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SensitivityLabel" type="RichTextLabel" parent="SettingsContainer/MarginContainer/VBoxContainer/SensitivityContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 48
text = "mouse sensitivity"
fit_content = true

[node name="HSlider" type="HSlider" parent="SettingsContainer/MarginContainer/VBoxContainer/SensitivityContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="VolumeContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolumeLabel" type="RichTextLabel" parent="SettingsContainer/MarginContainer/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 48
text = "music volume"
fit_content = true

[node name="HSlider" type="HSlider" parent="SettingsContainer/MarginContainer/VBoxContainer/VolumeContainer"]
custom_minimum_size = Vector2(400, 40)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.3

[node name="ResolutionContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResolutionLabel" type="RichTextLabel" parent="SettingsContainer/MarginContainer/VBoxContainer/ResolutionContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 48
text = "resolution"
fit_content = true

[node name="OptionButton" type="OptionButton" parent="SettingsContainer/MarginContainer/VBoxContainer/ResolutionContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_jgulj")
theme_override_font_sizes/font_size = 24
alignment = 1

[node name="FullscreenContainer" type="VBoxContainer" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FullscreenLabel" type="RichTextLabel" parent="SettingsContainer/MarginContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("1_tlseu")
theme_override_font_sizes/normal_font_size = 48
text = "fullscreen"
fit_content = true

[node name="CheckButton" type="CheckButton" parent="SettingsContainer/MarginContainer/VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_jgulj")

[node name="BackButton" type="Button" parent="SettingsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jgulj")
theme_override_font_sizes/font_size = 32
text = "back"

[connection signal="value_changed" from="SettingsContainer/MarginContainer/VBoxContainer/SensitivityContainer/HSlider" to="." method="_on_sensitivity_changed"]
[connection signal="item_selected" from="SettingsContainer/MarginContainer/VBoxContainer/ResolutionContainer/OptionButton" to="." method="_on_resolution_selected"]
[connection signal="toggled" from="SettingsContainer/MarginContainer/VBoxContainer/FullscreenContainer/CheckButton" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="SettingsContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="SettingsContainer/MarginContainer/VBoxContainer/VolumeContainer/HSlider" to="." method="_on_volume_changed"]
